--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -35,5 +36,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.0"
+  }
 }
